--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local Storage Test Site</title>
     <script src="./scripts/datamanager.js"></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="row">
